added img folders

--- a/safechat.html
+++ b/safechat.html
@@ -5,7 +5,7 @@
   <div class="div-2">
     <img
       loading="lazy"
-      src="images/safechatnavbar.png"
+      src="images/safechatnavbar.jpeg"
       class="img"
     />
     <div class="div-3">
@@ -33,7 +33,7 @@
     <div class="column-2">
       <div class="safechat" style="margin: 0 0 30px 0; font-weight: 900">SafeChat</div>
       <span class="bold-text">Where support meets convenience, one chat at a time.</span>
-      <span class="text"> SafeChat is a mobile app tailored to cater to the specific mental health needs of University of Washington students. It's a platform that's designed to bridge the gap between readily accessible, on-demand mental health support and the unique challenges faced by college students.</span>
+      <span class="text">SafeChat is a mobile app tailored to cater to the specific mental health needs of University of Washington students. It's a platform that's designed to bridge the gap between readily accessible, on-demand mental health support and the unique challenges faced by college students.</span>
       <div class="subtitle">USER RESEARCH</div>
       <div class="text">Our research delved into the hurdles university students encounter when seeking mental health resources. Through in-depth user interviews, we discovered prevalent issues:</div>
       <div class="text">
@@ -207,8 +207,6 @@
     margin-top: 10px;
   }
   .img {
-    width: 1728px;
-    height: 670px;
-
+    height: 620px;
   }
 </style>
