--- a/safechat.html
+++ b/safechat.html
@@ -5,7 +5,7 @@
   <div class="div-2">
     <img
       loading="lazy"
-      src="images/safechatnavbar.jpeg"
+      src="images/safechat/safechatnavbar.jpeg"
       class="img"
     />
     <div class="div-3">
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div style="margin-top: 725px;">
+  <div style="margin-top: 680px;">
     <div class="column">
       <img style="width: 200px; height: 81.57px; margin: 0 0 30px 0" src="https://via.placeholder.com/200x82" />
       <div class="label">Duration</div>
@@ -60,6 +60,38 @@
         <span class="text" style="color: #1565C0">Erica</span><span class="text"> seeks immediate, affordable support, while </span>
         <span class="text" style="color: #1565C0">Mike</span><span class="text"> prefers human-centric approaches at a lower cost. SafeChat aims to cater to these varying needs by offering an adaptable platform that integrates intuitive features for both users.</span>
       </div>
+      <div class="div-10">
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/ericapersona.png"
+            class="personas"
+          />
+          <figcaption><i>Erica Persona</i></figcaption>
+        </figure>
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/mikepersona.png"
+            class="personas"
+          />
+          <figcaption><i>Mike Persona</i></figcaption>
+        </figure>
+      </div>
+      <div class="subtitle">USER JOURNEY MAP</div>
+      <div>
+        <span class="text">To capture Mike's experience, we created a user journey map that highlighted his emotions, pain points, and moments of satisfaction while engaging with SafeChat.</span>
+      </div>
+    </div>
+    <div class="div-11" style="margin-top: 2300px;">
+      <figure>
+        <img
+          loading="lazy"
+          src="images/safechat/mikeuserjourney.png"
+          class="userjourney"
+        />
+        <figcaption><i>Mike's User Journey Map</i></figcaption>
+      </figure>
     </div>
   </div>
 </div>
@@ -208,5 +240,22 @@
   }
   .img {
     height: 620px;
+  }
+  .personas {
+    display: block;
+    margin-left: 100px;
+    margin-top: 75px;
+    width: 60%;
+  }
+  figcaption {
+    font-size: 24px;
+    font-weight: 500;
+    margin-left: 300px;
+    margin-top: 30px;
+  }
+  .userjourney {
+    display: block;
+    margin-left: 115px;
+    width: 85%;
   }
 </style>
