--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <div class="div">
   <div class="div-2">
@@ -16,7 +17,7 @@
       <div class="column">
         <img
           loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/289d912be9c3ddb5298d56ca8e8a481d30a71716c6d1454a00b816be4fb17b03?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          srcset="/images/safechat/aboutme.png"
           class="img"
         />
       </div>
@@ -98,347 +99,6 @@
           class="img-7"
         />
       </a>
-      <img
-        loading="lazy"
-        srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-        class="img-8"
-      />
     </div>
   </div>
 </div>
-<style>
-  .div {
-    justify-content: center;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    padding: 27px 75px;
-  }
-  @media (max-width: 991px) {
-    .div {
-      padding: 0 20px;
-    }
-  }
-  .div-2 {
-    display: flex;
-    width: 100%;
-    padding-right: 8px;
-    justify-content: space-between;
-    gap: 20px;
-    color: #000;
-  }
-  @media (max-width: 991px) {
-    .div-2 {
-      max-width: 100%;
-      flex-wrap: wrap;
-    }
-  }
-  .div-3 {
-    flex-grow: 1;
-    flex-basis: auto;
-    font: 600 20px/135% Epilogue, sans-serif;
-  }
-  .div-4 {
-    align-self: start;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    font-size: 17px;
-    font-weight: 400;
-    white-space: nowrap;
-    line-height: 159%;
-  }
-  @media (max-width: 991px) {
-    .div-4 {
-      white-space: initial;
-    }
-  }
-  .div-5 {
-    font-family: Epilogue, sans-serif;
-    flex-grow: 1;
-  }
-  .div-6 {
-    font-family: Epilogue, sans-serif;
-  }
-  .div-7 {
-    font-family: Epilogue, sans-serif;
-    font-weight: 600;
-  }
-  .div-8 {
-    font-family: Epilogue, sans-serif;
-    flex-grow: 1;
-  }
-  .div-9 {
-    margin-top: 103px;
-  }
-  @media (max-width: 991px) {
-    .div-9 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .div-10 {
-    gap: 20px;
-    display: flex;
-  }
-  @media (max-width: 991px) {
-    .div-10 {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0px;
-    }
-  }
-  .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 31%;
-    margin-left: 0px;
-  }
-  @media (max-width: 991px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .img {
-    aspect-ratio: 1.01;
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 69%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-2 {
-      width: 100%;
-    }
-  }
-  .div-11 {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .div-11 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .div-12 {
-    color: var(--Black, #2d2d2d);
-    font: 600 32px/131% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-12 {
-      max-width: 100%;
-    }
-  }
-  .div-13 {
-    color: #000;
-    margin-top: 32px;
-    font: 400 24px/40px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-13 {
-      max-width: 100%;
-    }
-  }
-  .img-2 {
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-    stroke-width: 1px;
-    stroke: #a8a8a8;
-    margin: 55px 40px 0 39px;
-  }
-  @media (max-width: 991px) {
-    .img-2 {
-      max-width: 100%;
-      margin: 40px 10px 0 0;
-    }
-  }
-  .div-14 {
-    margin: 106px 40px 0 39px;
-  }
-  @media (max-width: 991px) {
-    .div-14 {
-      max-width: 100%;
-      margin: 40px 10px 0 0;
-    }
-  }
-  .div-15 {
-    gap: 20px;
-    display: flex;
-  }
-  @media (max-width: 991px) {
-    .div-15 {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0px;
-    }
-  }
-  .column-3 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 0px;
-  }
-  @media (max-width: 991px) {
-    .column-3 {
-      width: 100%;
-    }
-  }
-  .img-3 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-3 {
-      margin-top: 40px;
-    }
-  }
-  .column-4 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-4 {
-      width: 100%;
-    }
-  }
-  .img-4 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-4 {
-      margin-top: 40px;
-    }
-  }
-  .column-5 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-5 {
-      width: 100%;
-    }
-  }
-  .img-5 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-5 {
-      margin-top: 40px;
-    }
-  }
-  .column-6 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-6 {
-      width: 100%;
-    }
-  }
-  .div-16 {
-    background-color: #ccc;
-    display: flex;
-    width: 300px;
-    max-width: 100%;
-    height: 300px;
-    flex-direction: column;
-    margin: 0 auto;
-  }
-  @media (max-width: 991px) {
-    .div-16 {
-      margin-top: 40px;
-    }
-  }
-  .div-17 {
-    display: flex;
-    margin-top: 153px;
-    width: 100%;
-    padding-right: 7px;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  @media (max-width: 991px) {
-    .div-17 {
-      max-width: 100%;
-      flex-wrap: wrap;
-      margin-top: 40px;
-    }
-  }
-  .div-18 {
-    color: rgba(0, 0, 0, 0.62);
-    flex-grow: 1;
-    flex-basis: auto;
-    margin: auto 0;
-    font: 400 20px/135% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-18 {
-      max-width: 100%;
-    }
-  }
-  .div-19 {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  .img-6 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-7 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-8 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  a {
-    color: unset;
-    text-decoration: unset;
-  }
-</style>
