separating image folder

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <div class="column">
         <img
           loading="lazy"
-          srcset="/images/safechat/aboutme.png"
+          srcset="/images/about/aboutme.png"
           class="img"
         />
       </div>
