--- a/archived.html
+++ b/archived.html
@@ -21,7 +21,7 @@
             <div class="div-14">
               <img
                 loading="lazy"
-                src="./images/safechat/instagramshopping.png"
+                src="./images/archived/instagramshopping.png"
                 class="img"
                 alt="Instagram Shopping"
               />
@@ -37,7 +37,7 @@
             <div class="div-18">
               <img
                 loading="lazy"
-                src="./images/safechat/soundtransit.png"
+                src="./images/archived/soundtransit.png"
                 class="img"
               />
             </div>
@@ -76,7 +76,7 @@
                     <div class="div-30">
                       <img
                         loading="lazy"
-                        srcset="/images/safechat/codehelp.png"
+                        srcset="/images/archived/codehelp.png"
                         class="img"
                       />
                     </div>
@@ -98,7 +98,7 @@
                 <div class="div-35">
                   <img
                     loading="lazy"
-                    src="./images/safechat/paint.png"
+                    src="./images/archived/paint.png"
                     class="img-6"
                   />
                   <div class="div-36">Paint</div>
@@ -115,7 +115,7 @@
                   <div class="div-39">
                     <img
                       loading="lazy"
-                      src="./images/safechat/tableau.png"
+                      src="./images/archived/tableau.png"
                       class="img-8"
                     />
                   </div>
