Created CSS files

--- a/islandwood.html
+++ b/islandwood.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="islandwood.css">
 </head>
 <div style="width: 1728px; height: 17627px; position: relative; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <img style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/1728x670" />
@@ -102,10 +103,3 @@
   <div style="left: 655px; top: 14587px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Epilogue; font-style: italic; font-weight: 500; line-height: 50px; word-wrap: break-word">Screen 3: Education Programs Page</div>
   <div style="width: 566px; left: 586px; top: 15755px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Epilogue; font-style: italic; font-weight: 500; line-height: 40px; word-wrap: break-word">Screen 4: Community Waters Science Unit Page</div>
 </div>
-
-<style>
-  a {
-    color: unset;
-    text-decoration: unset;
-  }
-</style>
