--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="resume.css">
 </head>
 <div class="div">
   <div class="div-2">
@@ -229,551 +230,3 @@
     </div>
   </div>
 </div>
-<style>
-  .div {
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding: 27px 75px;
-  }
-  @media (max-width: 991px) {
-    .div {
-      padding: 0 20px;
-    }
-  }
-  .div-2 {
-    align-self: stretch;
-    display: flex;
-    width: 100%;
-    padding-right: 7px;
-    justify-content: space-between;
-    gap: 20px;
-    color: #000;
-  }
-  @media (max-width: 991px) {
-    .div-2 {
-      max-width: 100%;
-      flex-wrap: wrap;
-    }
-  }
-  .div-3 {
-    flex-grow: 1;
-    flex-basis: auto;
-    font: 600 20px/135% Epilogue, sans-serif;
-  }
-  .div-4 {
-    align-self: start;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    font-size: 17px;
-    font-weight: 400;
-    white-space: nowrap;
-    line-height: 159%;
-  }
-  @media (max-width: 991px) {
-    .div-4 {
-      white-space: initial;
-    }
-  }
-  .div-5 {
-    font-family: Epilogue, sans-serif;
-    flex-grow: 1;
-  }
-  .div-6 {
-    font-family: Epilogue, sans-serif;
-  }
-  .div-7 {
-    font-family: Epilogue, sans-serif;
-  }
-  .div-8 {
-    font-family: Epilogue, sans-serif;
-    font-weight: 600;
-    flex-grow: 1;
-  }
-  .div-9 {
-    color: var(--Black, #2d2d2d);
-    white-space: nowrap;
-    margin: 63px 0 0 200px;
-    font: 600 32px/131% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-9 {
-      white-space: initial;
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-10 {
-    color: #1565c0;
-    white-space: nowrap;
-    margin: 58px 0 0 200px;
-    font: 500 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-10 {
-      white-space: initial;
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-11 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 23px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-11 {
-      max-width: 100%;
-    }
-  }
-  .div-12 {
-    color: #000;
-    white-space: nowrap;
-    margin: 9px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-12 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-13 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-13 {
-      max-width: 100%;
-    }
-  }
-  .div-14 {
-    color: #000;
-    white-space: nowrap;
-    margin: 5px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-14 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-15 {
-    color: #000;
-    white-space: nowrap;
-    margin: 9px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-15 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-16 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-16 {
-      max-width: 100%;
-    }
-  }
-  .div-17 {
-    color: #1565c0;
-    white-space: nowrap;
-    margin: 20px 0 0 200px;
-    font: 500 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-17 {
-      white-space: initial;
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-18 {
-    color: #000;
-    margin: 23px 0 0 200px;
-    font: 600 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-18 {
-      margin-left: 10px;
-    }
-  }
-  .div-19 {
-    color: #000;
-    white-space: nowrap;
-    margin: 14px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-19 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-20 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    width: 950px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-20 {
-      max-width: 100%;
-    }
-  }
-  .div-21 {
-    color: #000;
-    margin: 10px 0 0 200px;
-    font: 600 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-21 {
-      margin-left: 10px;
-    }
-  }
-  .div-22 {
-    color: #000;
-    white-space: nowrap;
-    margin: 14px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-22 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-23 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    width: 950px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-23 {
-      max-width: 100%;
-    }
-  }
-  .div-24 {
-    color: #000;
-    margin: 10px 0 0 200px;
-    font: 600 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-24 {
-      margin-left: 10px;
-    }
-  }
-  .div-25 {
-    color: #000;
-    white-space: nowrap;
-    margin: 14px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-25 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-26 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    width: 950px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-26 {
-      max-width: 100%;
-    }
-  }
-  .div-27 {
-    color: #000;
-    white-space: nowrap;
-    margin: 10px 0 0 200px;
-    font: 600 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-27 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-28 {
-    color: #000;
-    white-space: nowrap;
-    margin: 14px 0 0 200px;
-    font: 500 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-28 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-29 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 0px 0 0 180px;
-    width: 950px;
-    font: 400 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-29 {
-      max-width: 100%;
-    }
-  }
-  .div-30 {
-    color: #1565c0;
-    margin: 17px 0 0 200px;
-    font: 500 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-30 {
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-31 {
-    color: #000;
-    margin: 28px 0 0 200px;
-    font: 600 20px/30px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-31 {
-      max-width: 100%;
-    }
-  }
-  .div-32 {
-    color: #1565c0;
-    margin: 40px 0 0 200px;
-    font: 500 20px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-32 {
-      margin-left: 10px;
-    }
-  }
-  .div-33 {
-    color: #000;
-    /*align-self: center;*/
-    margin: 23px 0 0 200px;
-    font: 600 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-33 {
-      max-width: 100%;
-    }
-  }
-  .div-34 {
-    color: #000;
-    margin: 19px 0 0 200px;
-    font: 600 20px/20px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-34 {
-      max-width: 100%;
-    }
-  }
-  .img {
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-    stroke-width: 1px;
-    stroke: #a8a8a8;
-    align-self: stretch;
-    margin: 159px 43px 0 36px;
-  }
-  @media (max-width: 991px) {
-    .img {
-      max-width: 100%;
-      margin: 40px 10px 0 0;
-    }
-  }
-  .div-35 {
-    align-self: stretch;
-    margin: 109px 43px 0 36px;
-  }
-  @media (max-width: 991px) {
-    .div-35 {
-      max-width: 100%;
-      margin: 40px 10px 0 0;
-    }
-  }
-  .div-36 {
-    gap: 20px;
-    display: flex;
-  }
-  @media (max-width: 991px) {
-    .div-36 {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0px;
-    }
-  }
-  .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 0px;
-  }
-  @media (max-width: 991px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .img-2 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-2 {
-      margin-top: 40px;
-    }
-  }
-  .column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-2 {
-      width: 100%;
-    }
-  }
-  .img-3 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-3 {
-      margin-top: 40px;
-    }
-  }
-  .column-3 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-3 {
-      width: 100%;
-    }
-  }
-  .img-4 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 300px;
-    max-width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-4 {
-      margin-top: 40px;
-    }
-  }
-  .column-4 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 25%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-4 {
-      width: 100%;
-    }
-  }
-  .div-37 {
-    background-color: #ccc;
-    display: flex;
-    width: 300px;
-    max-width: 100%;
-    height: 300px;
-    flex-direction: column;
-    margin: 0 auto;
-  }
-  @media (max-width: 991px) {
-    .div-37 {
-      margin-top: 40px;
-    }
-  }
-  .div-38 {
-    align-self: stretch;
-    display: flex;
-    margin-top: 169px;
-    width: 100%;
-    padding-right: 7px;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  @media (max-width: 991px) {
-    .div-38 {
-      max-width: 100%;
-      flex-wrap: wrap;
-      margin-top: 40px;
-    }
-  }
-  .div-39 {
-    color: rgba(0, 0, 0, 0.62);
-    flex-grow: 1;
-    flex-basis: auto;
-    margin: auto 0;
-    font: 400 20px/135% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-39 {
-      max-width: 100%;
-    }
-  }
-  .div-40 {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  .img-5 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-6 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-7 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  a {
-    color: unset;
-    text-decoration: unset;
-  }
-</style>
