--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <div class="div">
   <div class="div-2">
@@ -88,308 +89,3 @@
     </div>
   </div>
 </div>
-<style>
-  .div {
-    justify-content: center;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    padding: 39px 75px 24px;
-  }
-  @media (max-width: 991px) {
-    .div {
-      padding: 0 20px;
-    }
-  }
-  .div-2 {
-    display: flex;
-    width: 100%;
-    padding-right: 8px;
-    justify-content: space-between;
-    gap: 20px;
-    color: #000;
-  }
-  @media (max-width: 991px) {
-    .div-2 {
-      max-width: 100%;
-      flex-wrap: wrap;
-    }
-  }
-  .div-3 {
-    flex-grow: 1;
-    flex-basis: auto;
-    font: 600 20px/135% Epilogue, sans-serif;
-  }
-  .div-4 {
-    align-self: start;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    font-size: 17px;
-    font-weight: 400;
-    white-space: nowrap;
-    line-height: 159%;
-  }
-  @media (max-width: 991px) {
-    .div-4 {
-      white-space: initial;
-    }
-  }
-  .div-5 {
-    font-family: Epilogue, sans-serif;
-    font-weight: 600;
-    flex-grow: 1;
-  }
-  .div-6 {
-    font-family: Epilogue, sans-serif;
-  }
-  .div-7 {
-    font-family: Epilogue, sans-serif;
-  }
-  .div-8 {
-    font-family: Epilogue, sans-serif;
-    flex-grow: 1;
-  }
-  .div-9 {
-    margin-top: 85px;
-  }
-  @media (max-width: 991px) {
-    .div-9 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .div-10 {
-    gap: 20px;
-    display: flex;
-  }
-  @media (max-width: 991px) {
-    .div-10 {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0px;
-    }
-  }
-  .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 50%;
-    margin-left: 0px;
-  }
-  @media (max-width: 991px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .div-11 {
-    display: flex;
-    margin-top: 22px;
-    flex-grow: 1;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .div-11 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .div-12 {
-    color: #000;
-    font: 500 48px/100% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-12 {
-      max-width: 100%;
-      font-size: 40px;
-    }
-  }
-  .div-13 {
-    color: #000;
-    margin-top: 26px;
-    font: 400 24px/35px Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-13 {
-      max-width: 100%;
-    }
-  }
-  .div-14 {
-    background-color: #ccc;
-    display: flex;
-    margin-top: 56px;
-    padding-right: 5px;
-    flex-direction: column;
-    justify-content: center;
-  }
-  @media (max-width: 991px) {
-    .div-14 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .div-15 {
-    disply: flex;
-    flex-direction: column;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    min-height: 750px;
-    align-items: start;
-    padding: 27px 33px 50px;
-  }
-  @media (max-width: 991px) {
-    .div-15 {
-      max-width: 100%;
-      padding: 0 20px;
-    }
-  }
-  .img {
-    position: absolute;
-    inset: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  .img-2 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 90px;
-    margin-bottom: 456px;
-  }
-  @media (max-width: 991px) {
-    .img-2 {
-      margin-bottom: 40px;
-    }
-  }
-  .div-16 {
-    background-color: #ccc;
-    display: flex;
-    margin-top: 66px;
-    height: 750px;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .div-16 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 50%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-2 {
-      width: 100%;
-    }
-  }
-  .div-17 {
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .div-17 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .img-3 {
-    aspect-ratio: 1.01;
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  @media (max-width: 991px) {
-    .img-3 {
-      max-width: 100%;
-    }
-  }
-  .div-18 {
-    justify-content: center;
-    background-color: #ccc;
-    display: flex;
-    margin-top: 76px;
-    padding-right: 5px;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .div-18 {
-      max-width: 100%;
-      margin-top: 40px;
-    }
-  }
-  .img-4 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 100%;
-  }
-  @media (max-width: 991px) {
-    .img-4 {
-      max-width: 100%;
-    }
-  }
-  .div-19 {
-    display: flex;
-    margin-top: 57px;
-    width: 100%;
-    padding-right: 7px;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  @media (max-width: 991px) {
-    .div-19 {
-      max-width: 100%;
-      flex-wrap: wrap;
-      margin-top: 40px;
-    }
-  }
-  .div-20 {
-    color: rgba(0, 0, 0, 0.62);
-    flex-grow: 1;
-    flex-basis: auto;
-    margin: auto 0;
-    font: 400 20px/135% Epilogue, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-20 {
-      max-width: 100%;
-    }
-  }
-  .div-21 {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  .img-5 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-6 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  .img-7 {
-    aspect-ratio: 1;
-    object-fit: auto;
-    object-position: center;
-    width: 50px;
-  }
-  a {
-    color: unset;
-    text-decoration: unset;
-  }
-</style>
