--- a/safechat.html
+++ b/safechat.html
@@ -83,14 +83,14 @@
         <span class="text">To capture Mike's experience, we created a user journey map that highlighted his emotions, pain points, and moments of satisfaction while engaging with SafeChat.</span>
       </div>
     </div>
-    <div class="div-11" style="margin-top: 2300px;">
+    <div class="div-11" style="margin-top: 2200px;">
       <figure>
         <img
           loading="lazy"
           src="images/safechat/mikeuserjourney.png"
           class="userjourney"
         />
-        <figcaption><i>Mike's User Journey Map</i></figcaption>
+        <figcaption style="text-align: center; margin-left: 0px;"><i>Mike's User Journey Map</i></figcaption>
       </figure>
     </div>
   </div>
@@ -198,7 +198,7 @@
     flex-direction: column;
     margin-left: 20px;
     font-size: 40px;
-    width: 70%;
+    width: 60%;
     margin-top: 0;
     float: left;
   }
