Added comments and fixed some errors on homepage

--- a/archived.html
+++ b/archived.html
@@ -12,7 +12,7 @@
       <div class="div-8"><a href="resume.html">Resume</a></div>
     </div>
   </div>
-  <div class="div-9">Archived work</div>
+  <div class="div-9">Archived Work</div>
   <div class="div-10">
     <div class="div-11">
       <div class="column">
