--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="capstone.html">
                 <img
                   loading="lazy"
-                  srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/2c997a20204602ab82ddb4c53f881579fe2e5f808de1f0f9bb0b5cafb052aedc?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+                  src="images/index/capstone.png"
                   class="img"
                 />
               </a>
@@ -47,7 +47,7 @@
           <a href="safechat.html">
             <img
               loading="lazy"
-              srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+              src="images/index/safechat.png"
               class="img-3"
             />
           </a>
@@ -55,7 +55,7 @@
             <a href="islandwood.html">
               <img
                 loading="lazy"
-                srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/97a3ea77272a31e5943a0a374e55fa633652d7dfce7a30e7aff696564275b8f3?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+                src="images/index/islandwood.png"
                 class="img-4"
               />
             </a>
@@ -67,6 +67,7 @@
   <div class="div-19">
     <div class="div-20">© Designed and Developed by Katie Hancock</div>
     <div class="div-21">
+      <!-- Gmail -->
       <a href=mailto:"katiexinran@gmail.com">
         <img
           loading="lazy"
@@ -81,11 +82,6 @@
           class="img-6"
         />
       </a>
-      <img
-        loading="lazy"
-        srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-        class="img-7"
-      />
     </div>
   </div>
 </div>
