Fixed some formatting in Archived

--- a/archived.html
+++ b/archived.html
@@ -60,7 +60,7 @@
                     <img
                       loading="lazy"
                       srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-                      class="img-4"
+                      class="img"
                     />
                   </div>
                   <div class="div-26">Flappy Bird</div>
@@ -99,7 +99,7 @@
                   <img
                     loading="lazy"
                     src="./images/archived/paint.png"
-                    class="img-6"
+                    class="img"
                   />
                   <div class="div-36">Paint</div>
                   <div class="div-37">
@@ -116,7 +116,7 @@
                     <img
                       loading="lazy"
                       src="./images/archived/tableau.png"
-                      class="img-8"
+                      class="img"
                     />
                   </div>
                   <div class="div-40">
@@ -135,6 +135,7 @@
       </div>
     </div>
   </div>
+  <!-- Divider line at the bottom -->
   <img
     loading="lazy"
     src="https://cdn.builder.io/api/v1/image/assets/TEMP/936e91a90b6ab77fbc96e9f3c1476354319e6acf55c5e2799fbc0f1beed9e520?apiKey=e0e370d878974b25a6e3d058316b06d7&"
@@ -145,21 +146,21 @@
       <div class="column-7">
         <img
           loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          src="images/index/safechat.png"
           class="img-10"
         />
       </div>
       <div class="column-8">
         <img
           loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          src="images/index/capstone.png"
           class="img-11"
         />
       </div>
       <div class="column-9">
         <img
           loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          src="images/index/islandwood.png"
           class="img-12"
         />
       </div>
