crying and shaking

--- a/safechat.html
+++ b/safechat.html
@@ -21,7 +21,7 @@
   </div>
   <div style="margin-top: 680px;">
     <div class="column">
-      <img style="width: 200px; height: 81.57px; margin: 0 0 30px 0" src="https://via.placeholder.com/200x82" />
+      <img style="width: 200px; height: 81.57px; margin: 0 0 30px 0" src="/images/safechat/safechatlogo.png" />
       <div class="label">Duration</div>
       <div class="contents">March - June, 2021</div>
       <div class="label">Key Contributions</div>
