Fixed formatting in Archived

--- a/archived.html
+++ b/archived.html
@@ -59,7 +59,7 @@
                   <div class="div-25">
                     <img
                       loading="lazy"
-                      srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/543585fc6847a5b24f57c2adde4c11b1b2d1d6402878c6dcd1f3da6b187ceca7?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+                      src="images/archived/flappybird.png"
                       class="img"
                     />
                   </div>
